--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.4",
+    "@ngx-pwa/offline": "^9.1.0",
     "core-js": "^3.6.4",
     "rxjs": "~6.5.4",
     "zone.js": "~0.10.2"
