--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
     "@angular/router": "^9.0.0",
+    "@angular/service-worker": "^9.0.0",
     "@capacitor/android": "^1.0.0-beta.17",
     "@capacitor/cli": "1.5.0",
     "@capacitor/core": "1.5.0",
